<?xml version="1.0"?>
<package format="3">
  <name>point_lio_unilidar</name>
  <version>0.0.0</version>
  <description>
    This is a modified version of LOAM which is original algorithm
    is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.

    Note: Migrated to ROS2 by Igor Antonov
  </description>

  <maintainer email="whiteagle3k@gmail.com">Igor Antonov</maintainer>
  <author email="lukelbmeng@gmail.com">Lingbo Meng</author>

  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Common dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>tf2_eigen</depend>
  <!-- Uncomment if using Livox LiDAR driver -->
  <!-- <depend>livox_ros_driver</depend> -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
